--- a/src/components/ui/DressCode/DressCode.module.css
+++ b/src/components/ui/DressCode/DressCode.module.css
@@ -131,7 +131,7 @@ overflow: hidden;
   }
   .flowersSvg {
     position: absolute;
-    top: -70px; 
+    top: -80px; 
     right: -120px; 
     width: 200px; 
     height: 300px; 
