--- a/src/components/ui/PlaceOfWeddingInfo/PlaceOfWedding.module.css
+++ b/src/components/ui/PlaceOfWeddingInfo/PlaceOfWedding.module.css
@@ -235,6 +235,7 @@ position: relative;
       margin-top: 0px;
       width: 100vw;
       height: 400px;
+      margin-bottom: 60px;
     }
   
     .howToGetInfo {
