--- a/src/components/ui/Timer/Timer.module.css
+++ b/src/components/ui/Timer/Timer.module.css
@@ -334,6 +334,7 @@
         gap: 15px;
         flex-wrap: wrap;
         justify-content: center;
+        margin-left: 0px;
     }
 
     .timeBlock {
@@ -349,7 +350,7 @@
     }
 
     .timeLabel {
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .calendarWrap {
